# amide

amide-current/: .gitignore  CMakeLists.txt  amide_config.h.in
amide-current/pixmaps/: CMakeLists.txt
amide-current/src/: CMakeLists.txt
